Logo link update

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <!-- Navigation links -->
         <nav>
              <!-- Logo -->
-            <a href="index.html">
-                <img src="./images/logo.svg" alt="Логотип веб студии">
-            </a>
+            <a href="index.html">WebStudio</a>
             <!-- Links -->
             <ul>
                 <li>
@@ -113,9 +111,7 @@
     <!-- Footer -->
     <footer>
         <!-- Logo -->
-        <a href="index.html">
-            <img src="./images/logo.svg" alt="Логотип веб студии">
-        </a>
+        <a href="index.html">WebStudio</a>
         <!-- Contacts -->
         <ul>
             <li>
