--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Navigation links -->
         <nav>
              <!-- Logo -->
-            <a href="index.html">WebStudio</a>
+            <a href="index.html">Web<span>Studio</span></a>
             <!-- Links -->
             <ul>
                 <li>
@@ -111,19 +111,21 @@
     <!-- Footer -->
     <footer>
         <!-- Logo -->
-        <a href="index.html">WebStudio</a>
+        <a href="index.html">Web<span>Studio</span></a>
         <!-- Contacts -->
-        <ul>
-            <li>
-                <address>г. Киев, пр-т Леси Украинки, 26</address>
-            </li>
-            <li>
-                <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-        </ul>
+        <address>
+            <ul>
+                <li>
+                    г. Киев, пр-т Леси Украинки, 26
+                </li>
+                <li>
+                    <a href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 </body>
 </html>
